[gd_scene load_steps=19 format=3 uid="uid://7e2efst2is40"]

[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/basic_enemy.gd" id="1_h7b67"]
[ext_resource type="PackedScene" uid="uid://eoes8vo1fdmk" path="res://scenes/component/vial_drop_component.tscn" id="2_vvsqp"]
[ext_resource type="PackedScene" uid="uid://dalklbolumbe5" path="res://scenes/component/magnet_drop_component.tscn" id="3_vbe0g"]
[ext_resource type="PackedScene" uid="uid://dswih2jaab2qc" path="res://scenes/component/hit_flash_component.tscn" id="4_q7mmo"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="5_wenem"]
[ext_resource type="PackedScene" uid="uid://b0xoghkyeg3fu" path="res://scenes/component/velocity_component.tscn" id="6_af15o"]
[ext_resource type="PackedScene" uid="uid://rivt7p1rl50f" path="res://scenes/component/health_component.tscn" id="7_n3jxd"]
[ext_resource type="PackedScene" uid="uid://b85cdq58hqrqy" path="res://scenes/component/hurtbox_component.tscn" id="8_0sj8h"]
[ext_resource type="PackedScene" uid="uid://bv1dctyn05nvr" path="res://scenes/component/death_component.tscn" id="8_pnjqh"]
[ext_resource type="PackedScene" uid="uid://yqxg1matpb5g" path="res://scenes/component/avoidance_area_component.tscn" id="9_wh7f7"]
[ext_resource type="Texture2D" uid="uid://loi08dn1c5fw" path="res://scenes/game_object/basic_enemy/basic_enemy.png" id="10_8fw1a"]

[sub_resource type="Animation" id="Animation_03x4i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qhmk5"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exbnj"]
_data = {
"RESET": SubResource("Animation_03x4i"),
"walk": SubResource("Animation_qhmk5")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x866i"]
resource_local_to_scene = true
shader = ExtResource("5_wenem")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b0gg7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ngx3n"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_0bcif"]
radius = 4.0

[node name="OptimisedEnemy" type="Node2D" groups=["enemy"]]
script = ExtResource("1_h7b67")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_exbnj")
}

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_vvsqp")]
drop_percent = 0.35
health_component = NodePath("../HealthComponent")

[node name="MagnetDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_vbe0g")]
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_q7mmo")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_x866i")

[node name="VelocityComponent" parent="." instance=ExtResource("6_af15o")]

[node name="HealthComponent" parent="." instance=ExtResource("7_n3jxd")]

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("8_pnjqh")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_0sj8h")]
visible = false
position = Vector2(0, -3)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_b0gg7")

[node name="AvoidanceArea" parent="." instance=ExtResource("9_wh7f7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AvoidanceArea"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_ngx3n")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("10_8fw1a")
offset = Vector2(0, -4)

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_0bcif")
